--- a/home.html
+++ b/home.html
@@ -5,57 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DekuWorks LLC&TRADE;</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/index.html" id="navbar__logo">
-                DekuWorks
-            </a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <a href="/index.html" class="navbar__logo">DekuWorks</a>
+
+            <div class="navbar__menu">
+                <a href="./index.html" class="navbar__menu--link">Home</a>
+                <a href="./about.html" class="navbar__menu--link">About Me</a>
+                <a href="https://t.co/a4uxapI7Fe" class="navbar__menu--link">Socials</a>
+                <a href="/" class="navbar__menu--button--link">My Portfolio</a>
             </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="./index.html" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="./about.html" class="navbar__links">About Me</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="https://t.co/a4uxapI7Fe" class="navbar__links">Socials</a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="/" class="button">My Portfolio</a>
-                </li>
-            </ul>
         </div>
     </nav>
 
     <!--Hero Section-->
-    <div class="main">
+    <header class="main">
         <div class="main__container">
-            <div class="main__content">
-                <h1>Why DekuWorks?</h1>
-                <h3> - "`DekuWorks` is more than one man or an idea."</h3>
-                <p>DekuWorks(Marcus Brown) specializes in front end development which includes fluent in HTML, CSS, and
-                    JavaScript. He also does custom 3d prints orders and content. Find out more in the 'About Me'. </p>
-                <div class="main__img--container">
-                    <img src="/selectpic1.svg" alt="" id="main__img">
-                </div>
+            <h1 class="main__title animate__animated animate__bounce">Why DekuWorks?</h1>
+            <h2 class="main__subitle animate__animated animate__bounce"> - "`DekuWorks` is more than one man or an
+                idea."</h2>
+            <p class="main__description">DekuWorks(Marcus Brown) specializes in front end development which includes
+                fluent in HTML, CSS, and
+                JavaScript. He also does custom 3d prints orders and content. Find out more in the 'About Me'. </p>
+            <div class="main__img--container">
+                <img src="/selectpic1.svg" alt="main-image" class="main__img">
             </div>
         </div>
-    </div>
+    </header>
 
+    <footer class="footer">
+        <a>DekuWorks LLC&TRADE; | Email: dekuworks1@gmail.com | Number: (864)-524-7473</a>
+    </footer>
 
-    <script src="app.js"></script>
 </body>
-<footer>
-    <a>DekuWorks LLC&TRADE; | Email: dekuworks1@gmail.com | Number: (864)-524-7473</a>
-</footer>
 
 </html>
