change bounce on title

--- a/home.html
+++ b/home.html
@@ -26,8 +26,8 @@
     <!--Hero Section-->
     <header class="main">
         <div class="main__container">
-            <h1 class="main__title animate__animated animate__bounce">Why DekuWorks?</h1>
-            <h2 class="main__subitle animate__animated animate__bounce"> - "`DekuWorks` is more than one man or an
+            <h1 class="main__title animate__animated animate__backInLeft">Why DekuWorks?</h1>
+            <h2 class="main__subitle animate__animated animate__backInRight"> - "`DekuWorks` is more than one man or an
                 idea."</h2>
             <p class="main__description">DekuWorks(Marcus Brown) specializes in front end development which includes
                 fluent in HTML, CSS, and
