cleanup file tree

--- a/about.html
+++ b/about.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
 </head>
+
 <body>
     <nav class="navbar">
         <div class="navbar__container">
             <a href="/index.html" id="navbar__logo" alt="Returns to Home">
-                DekuWorks 
-                </a>
-             <div class="navbar__toggle" id="mobile-menu">
+                DekuWorks
+            </a>
+            <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-             </div>
-             <ul class="navbar__menu"> 
+            </div>
+            <ul class="navbar__menu">
                 <li class="navbar__item">
                     <a href="./about.html" class="navbar__links">About Me</a>
                 </li>
-                 <li class="navbar__item">
+                <li class="navbar__item">
                     <a href="https://t.co/a4uxapI7Fe" class="navbar__links">Socials</a>
-                 </li>
-                 <li class="navbar__btn">
+                </li>
+                <li class="navbar__btn">
                     <a href="/" class="button">My Portfolio</a>
-                 </li>
-             </ul>
+                </li>
+            </ul>
         </div>
     </nav>
     <!--Hero Section-->
@@ -35,9 +37,13 @@
         <div class="main__container">
             <div class="main__content">
                 <h1>About Me</h1>
-                <p>Hey Everyone! My name is Marcus Brown. I am from Anderson, South Carolina but I am currently residing in Spartanburg. I have always been around technology whether its a controller in my hand or building personal computers. I have been coding for almost 2 years now. In that amount of time I have taught myself to become fluent in HTML, CSS, and JavaScript. The goal is to turn coding into a fulltime career! Feel free to check out my portfolio and the 'Socials' tab for more! Thank you!</p>
+                <p>Hey Everyone! My name is Marcus Brown. I am from Anderson, South Carolina but I am currently residing
+                    in Spartanburg. I have always been around technology whether its a controller in my hand or building
+                    personal computers. I have been coding for almost 2 years now. In that amount of time I have taught
+                    myself to become fluent in HTML, CSS, and JavaScript. The goal is to turn coding into a fulltime
+                    career! Feel free to check out my portfolio and the 'Socials' tab for more! Thank you!</p>
                 <div class="main__img--container">
-                    <img src="/20230120_204240073_iOS.jpg" alt="" id="main__img">
+                    <img src="./assets/20230120_204240073_iOS.jpg" alt="" id="main__img">
                 </div>
             </div>
         </div>
@@ -47,4 +53,5 @@
 <footer>
     <a>DekuWorks LLC&TRADE; | Email: dekuworks1@gmail.com | Number: (864)-524-7473</a>
 </footer>
+
 </html>
