--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DekuWorks LLC&TRADE;</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -33,7 +33,7 @@
                 fluent in HTML, CSS, and
                 JavaScript. He also does custom 3d prints orders and content. Find out more in the 'About Me'. </p>
             <div class="main__img--container">
-                <img src="/selectpic1.svg" alt="main-image" class="main__img">
+                <img src="./assets/selectpic1.svg" alt="main-image" class="main__img">
             </div>
         </div>
     </header>
