--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
 
-    <script src="app.js"></script>
+    <script src="./scripts/app.js"></script>
 </body>
 <footer>
     <a>DekuWorks LLC&TRADE; | Email: dekuworks1@gmail.com | Number: (864)-524-7473</a>
