--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="./scripts/app.js"></script>
 </body>
 <footer>
     <a>DekuWorks LLC&TRADE; | Email: dekuworks1@gmail.com | Number: (864)-524-7473</a>
